refactor & add textures

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,6 +2,6 @@
 
 project ("zengluec")
 add_subdirectory(lib/ZenLib)
-add_library (zenglue SHARED "zenglue.cpp")
+add_library (zenglue SHARED "zenglue.cpp" "zg_vob.cpp" "zg_mesh.cpp" "zg_vdfs.cpp")
 
-target_link_libraries(zenglue PRIVATE zenload vdfs)
+target_link_libraries(zenglue PRIVATE zenload vdfs squish)
