modelscript mesh parsing

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,5 +2,14 @@
 
 project ("zenglue")
 add_subdirectory(lib/ZenLib)
-add_library (zenglue SHARED "zg_tex.cpp" "zg_vob.cpp" "zg_mesh.cpp" "zg_vdfs.cpp" "zg_world.cpp")
+add_library (zenglue SHARED 
+	"zg_mesh.cpp" 
+	"zg_script.cpp"
+	"zg_tex.cpp" 
+	"zg_vdfs.cpp" 
+	"zg_vob.cpp" 
+	"zg_world.cpp" 
+)
 target_link_libraries(zenglue PRIVATE zenload vdfs squish)
+
+
